# autograder-shared

./: Dockerfile  pyproject.toml  requirements.txt
data/: sort.toml  template.toml
shared/: models.py
shared/data/: template.toml  union_find.toml
tests/: test_data_validity.py
